Footer text align fix

--- a/scss/footer.module.scss
+++ b/scss/footer.module.scss
@@ -26,32 +26,38 @@
   @media (max-width: var.$mediaShift) {
     flex-direction: column;
   }
+}
 
-  .block {
+.block {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+
+  @media (max-width: var.$mediaShift) {
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
+  }
 
-    &__title {
-      margin-bottom: 1rem;
-      text-transform: capitalize;
-    }
+  &__title {
+    margin-bottom: 1rem;
+    text-transform: capitalize;
+  }
 
-    &__link {
-      width: max-content;
+  &__link {
+    width: max-content;
+
+    @media (max-width: var.$mediaShift) {
       margin: 0 auto;
+    }
 
-      &:hover {
-        color: var.$primaryText;
-      }
+    &:hover {
+      color: var.$primaryText;
     }
   }
+}
 
-  .socials {
-    display: flex;
-    height: 24px;
-    align-items: center;
-    column-gap: 1rem;
-  }
+.socials {
+  display: flex;
+  height: 24px;
+  align-items: center;
+  column-gap: 1rem;
 }
